--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,9 @@ bind -r m resize-pane -Z
 
 set -g mouse on
 
+# For Lazyvim bugs/feature
+set -sg escape-time 0
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
